@@ -973,6 +973,9 @@
 		<a href="#about-loadportraitsprite">load portrait sprite (num, palette)</a><br>
 		
 	
+		<a href="#about-loadslicecollection">load slice collection (id)</a><br>
+		
+	
 		<a href="#about-loadsmallenemysprite">load small enemy sprite (num, palette)</a><br>
 		
 	
@@ -5227,6 +5230,14 @@ end
 		<font color="#f06060" size="4">Slice Functions</font>
 		<p></p>
 		
+		<a name="about-loadslicecollection"></a>
+		<p>
+		<tt>
+		<b><font color="yellow">load slice collection (id)</font></b><br>
+			Loads a collection of slices that you have defined in the slice collection editor. The argument is the <span class="param">id</span> number of the collection. The return value is a handle to the container that holds the loaded collection.<br>
+			
+			
+		</tt></p>
 		<a name="about-lookupslice"></a>
 		<p>
 		<tt>
@@ -9442,7 +9453,7 @@ end</pre>
 			</tt></p>
 
 		<hr>
-	<p>Stats: There are 680 commands in this file, of which 54 are only references to other commands.</p>
+	<p>Stats: There are 681 commands in this file, of which 54 are only references to other commands.</p>
 <p>This file was generated from an XML file. The contents were painstakingly transcribed by Mike Caron from the original Plotscripting Dictionary, which was created by James Paige.</p>
 </body>
 </html>
