@@ -17,7 +17,8 @@ WHAT IS NEW?
     * "set slice clipping", "get slice clipping" [James, Ralph]
     * "create grid", "slice is grid", "set grid columns",
       "get grid columns", "set grid rows", "get grid rows",
-      "show grid", "grid is shown"
+      "show grid", "grid is shown" [James]
+    * "load slice collection" [James]
 
   * Vikings of Midgard
 
